--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body background="bgweb.jpg">
 
 
-    <h1>Game Pukul Tikus Berdasi di buat oleh Koswara</h1>
+    <h1>Game Pukul Tikus Tanah Oke</h1>
 
     <button type="button" class="mulai" onclick="mulai()">Mulai</button>
 
