--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
     </div>
 
     <audio class="pop">
-        <source src="audio/Pop.mp3" type="audio/mpeg">
-        <source src="audio/pop2.mp3" type=audio/mpeg">
+        <source src="audio/Pop.mp3" type="audio/mpeg">   
     </audio>
+
+    </audio2>
+        <source src="audio2/pop2.mp3" type=audio2/mpeg">
+    </audio2>
+
 
     <script src="js/script.js"></script>
 </body>
